Auditing minor change

--- a/FakeNews/templates/FakeNewsApp/audprofile.html
+++ b/FakeNews/templates/FakeNewsApp/audprofile.html
@@ -116,7 +116,7 @@
 							
 						</figcaption>
 						
-						<a href="/article/{{article.id}}"></a><button>Read More</button>
+						<a href="/auditing/{{article.id}}"></a><button>Read More</button>
 					</figure>
 					{% endfor %}
 					
